--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -1,39 +1,85 @@
-name: example-2
+name: example
+
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+
+
 permissions:
   contents: read
   pages: write
   id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v4
+
       - name: download node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+
       - name: download deps
         run: npm ci
+
       - name: Build project
-        run: |
-          cd vite-project
-          npm run build
+        run: npm run build
+
       - name: upload artifacts
         uses: actions/upload-pages-artifact@v3
         with:
           path: "./dist"
-  deploy:
-    needs: build
+
+name: example
+
+on:
+  push:
+    branches: [main]
+  workflow_dispatch:
+
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+jobs:
+  build:
     runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: download node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: download deps
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: upload artifacts
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: "./dist"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
     if: github.event_name == 'workflow_dispatch'
     environment:
       name: github-pages
-      url: ${{ steps.deploy-to-pages.outputs.page_url }}
+      url: ${{steps.deployment.outputs.page_url}}
+
     steps:
       - name: deploy
         uses: actions/deploy-pages@v4
