--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -5,7 +5,6 @@ on:
     branches: [main]
   workflow_dispatch:
 
-
 permissions:
   contents: read
   pages: write
@@ -15,71 +14,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: download node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
 
-      - name: download deps
-        run: npm ci
+      - run: npm ci
+      - run: npm run build
 
-      - name: Build project
-        run: npm run build
-
-      - name: upload artifacts
-        uses: actions/upload-pages-artifact@v3
+      - uses: actions/upload-pages-artifact@v3
         with:
-          path: "./dist"
-
-name: example
-
-on:
-  push:
-    branches: [main]
-  workflow_dispatch:
-
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v4
-
-      - name: download node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-
-      - name: download deps
-        run: npm ci
-
-      - name: Build project
-        run: npm run build
-
-      - name: upload artifacts
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: "./dist"
+          path: ./dist
 
   deploy:
-    runs-on: ubuntu-latest
     needs: build
+    runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     environment:
       name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
-
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: deploy
+      - id: deployment
         uses: actions/deploy-pages@v4
