--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,6 +10,10 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,6 +31,23 @@ jobs:
       - uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-pages-artifact@v2
+
+      - name: Run tests
+        run: npx vitest run | tee test-results.log
+      - name: upload logs
+        if: always()
+        uses: actions/upload-artifact@v4
+          echo "Running tests on built artifacts..."
+        with:
+          name: vitest-logs
+          path: test-results.log
+          retention-days: 3
 
   deploy:
     needs: build
