--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: 'pages'
+  group: pages
   cancel-in-progress: true
 
 jobs:
@@ -33,25 +33,32 @@ jobs:
           path: ./dist
 
   test:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - uses: actions/download-pages-artifact@v2
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - run: npm ci
 
       - name: Run tests
         run: npx vitest run | tee test-results.log
-      - name: upload logs
+
+      - name: Upload test logs
         if: always()
         uses: actions/upload-artifact@v4
-          echo "Running tests on built artifacts..."
         with:
           name: vitest-logs
           path: test-results.log
           retention-days: 3
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
+    needs: [build, test]
     if: github.event_name == 'workflow_dispatch'
     environment:
       name: github-pages
