--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -15,6 +15,18 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+
+  greet:
+      runs-on: ubuntu-latest
+      steps:
+        - name: checkout
+          uses: actions/checkout@v4
+        - name: greet
+          uses: ./.github/actions/greet
+          with:
+            name: "Владимир П."
+
+
   build:
     runs-on: ubuntu-latest
     steps:
